refactor: storage interface and service registry